// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.failsafe.acceptance given: [case1] reviewer exits with code 0 (passed) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.review-pass._.review.i1.02a05f3dadac64ddd2.r1._.given.by_peer.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.review-pass
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/1.review-pass*.md
   │  ├─ reviews
   │  │   └─ r1: bash (l1, 1/∞)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .reviews/peer/1.review-pass._.review.i1.02a05f3dadac64ddd2.r1._.given.by_peer.bash.md
   │  └─ judges
   │      └─ j1: bash $route/.test/mock-judge-exit-0.sh
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.failsafe.acceptance given: [case2] reviewer exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  passed: false
   │  │  reason: threshold exceeded (1 > 0)
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by constraints
      └─ exit code: 2 ✋
"
`;

exports[`driver.route.failsafe.acceptance given: [case2] reviewer exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/2.review-constraint._.review.i1.c090dd3895c99e392c.r1._.given.by_peer.bash.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 2.review-constraint
   ├─ passage = blocked
   ├─ reason = threshold exceeded (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ $route/2.review-constraint*.md
      ├─ reviews
      │   └─ r1: bash (l1, 1/∞)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: .reviews/peer/2.review-constraint._.review.i1.c090dd3895c99e392c.r1._.given.by_peer.bash.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-2.sh
              ├─ finished [TIME] ✗
              └─ reason: threshold exceeded (1 > 0)
"
`;

exports[`driver.route.failsafe.acceptance given: [case3] reviewer exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🔎 review 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: reviewer crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: ERROR: fatal crash
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥
"
`;

exports[`driver.route.failsafe.acceptance given: [case3] reviewer exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ 💥 malfunction
   │   └─ review: .reviews/peer/3.review-malfunction._.review.i1.b6fcd55294fe610638.r1._.given.by_peer.bash.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 3.review-malfunction
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   └─ guard
      ├─ artifacts
      │   └─ $route/3.review-malfunction*.md
      ├─ reviews
      │   └─ r1: bash (l1, 0/∞)
      │       ├─ 💥 malfunction
      │       └─ review: .reviews/peer/3.review-malfunction._.review.i1.b6fcd55294fe610638.r1._.given.by_peer.bash.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-0.sh
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.failsafe.acceptance given: [case3] reviewer exits with code 1 (malfunction) when: [t2] route.drive is invoked after malfunction then: stdout matches snapshot 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = 
   │  └─ stone = 3.review-malfunction
   │
   └─ 💥 halted, guard malfunction
      └─ please tell a human this needs to be fixed before you can continue
"
`;

exports[`driver.route.failsafe.acceptance given: [case4] judge exits with code 0 (passed) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 4.judge-pass
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ $route/4.judge-pass*.md
   │  └─ judges
   │      └─ j1: bash $route/.test/mock-judge-exit-0.sh
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;

exports[`driver.route.failsafe.acceptance given: [case5] judge exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  passed: false
   │  │  reason: threshold exceeded (1 > 0)
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by constraints
      └─ exit code: 2 ✋
"
`;

exports[`driver.route.failsafe.acceptance given: [case5] judge exits with code 2 (constraint) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 5.judge-constraint
   ├─ passage = blocked
   ├─ reason = threshold exceeded (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ $route/5.judge-constraint*.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-2.sh
              ├─ finished [TIME] ✗
              └─ reason: threshold exceeded (1 > 0)
"
`;

exports[`driver.route.failsafe.acceptance given: [case6] judge exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: judge crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: FATAL: judge process failed
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥
"
`;

exports[`driver.route.failsafe.acceptance given: [case6] judge exits with code 1 (malfunction) when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 6.judge-malfunction
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   └─ guard
      ├─ artifacts
      │   └─ $route/6.judge-malfunction*.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-1.sh
              ├─ finished [TIME] ✗
              └─ reason: command exited 1; see judge artifact for details
"
`;

exports[`driver.route.failsafe.acceptance given: [case6] judge exits with code 1 (malfunction) when: [t2] route.drive is invoked after malfunction then: stdout matches snapshot 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = 
   │  └─ stone = 6.judge-malfunction
   │
   └─ 💥 halted, guard malfunction
      └─ please tell a human this needs to be fixed before you can continue
"
`;

exports[`driver.route.failsafe.acceptance given: [case7] both reviewer and judge malfunction when: [t0] route.stone.set --as passed is invoked then: stderr matches snapshot 1`] = `
"
🔎 review 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: reviewer crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: ERROR: fatal crash
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥

🪶 judge 1
   ├─ stdout
   │  ├─
   │  │
   │  │  stdout: judge crashed unexpectedly
   │  │
   │  └─
   ├─ stderr
   │  ├─
   │  │
   │  │  stderr: FATAL: judge process failed
   │  │
   │  └─
   └─ passage blocked
      ├─ blocked by malfunction
      └─ exit code: 1 💥
"
`;

exports[`driver.route.failsafe.acceptance given: [case7] both reviewer and judge malfunction when: [t0] route.stone.set --as passed is invoked then: stdout matches snapshot 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: bash (l1, 1/∞)
   │   ├─ 💥 malfunction
   │   └─ review: .reviews/peer/7.both-malfunction._.review.i1.a4c505990c8a7a5349.r1._.given.by_peer.bash.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 7.both-malfunction
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   └─ guard
      ├─ artifacts
      ├─ reviews
      │   └─ r1: bash (l1, 0/∞)
      │       ├─ 💥 malfunction
      │       └─ review: .reviews/peer/7.both-malfunction._.review.i1.a4c505990c8a7a5349.r1._.given.by_peer.bash.md
      └─ judges
          └─ j1: bash $route/.test/mock-judge-exit-1.sh
              ├─ finished [TIME] ✗
              └─ reason: command exited 1; see judge artifact for details
"
`;
